C# async and parallel

--- a/MG.PoshRSJob/MG.PoshRSJob/MG.PoshRSJob.csproj
+++ b/MG.PoshRSJob/MG.PoshRSJob/MG.PoshRSJob.csproj
@@ -40,6 +40,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="GuidOrInt.cs" />
+    <Compile Include="JobResultCollection.cs" />
     <Compile Include="JobRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSJob.cs" />
